--- a/frontweb/public/index.html
+++ b/frontweb/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt_BR">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Projeto desenvolvido no bootcamp React DevSuperior"
+      content="Projeto desenvolvido no bootcamp React - DevSuperior"
     />
     <title>DSCatalog</title>
   </head>
